src/tests/snapshots/fmtt__tests__format__long_link-2.snap
---
source: src/tests/format.rs
expression: "&markdown_formatted"
---
[![YouTube
icon](https://www.gstatic.com/youtube/img/branding/youtubelogo/svg/youtubelogo.svg)
Channel](https://www.youtube.com/@sichanghe)
