src/tests/snapshots/fmtt__tests__format__long_link.snap
---
source: src/tests/format.rs
expression: "&default_formatted"
---
[![YouTube
icon](https://www.gstatic.com/youtube/img/branding/youtubelogo/svg/youtubelogo.svg)
Channel](https://www.youtube.com/@sichanghe)
